# huffman-algorithm

./: CMakeLists.txt  README.md
apps/: compression.cpp  decompression.cpp
data/: carl_sagan.txt  ecg_data.txt  genetic_data.txt  hiv1_envelope_gene.fasta
include/: Huffman.hpp  helpers.hpp  serializeTree.hpp
